Added TestUnites and phpunit lib

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Farid\\": "src/"
+      "Farid\\": "src/",
+      "Farid\\Tests\\": "tests/"
     }
   },
   "authors": [
