--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "ext-json": "*",
   "require": {
     "php": ">=7.1.0",
+    "aura/router": "^3.1",
     "laminas/laminas-diactoros": "^2.4",
     "laminas/laminas-httphandlerrunner": "^1.2",
     "psr/http-message": "^1.0"
