--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,17 @@
   "config": {
     "sort-packages": true
   },
-  "ext-json": "*",
   "require": {
     "php": ">=7.1.0",
     "aura/router": "^3.1",
     "laminas/laminas-diactoros": "^2.4",
     "laminas/laminas-httphandlerrunner": "^1.2",
-    "psr/http-message": "^1.0"
+    "psr/http-message": "^1.0",
+    "ext-json": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.4",
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
@@ -25,9 +29,5 @@
       "name": "Farid",
       "email": "fred.andersen7@gmail.com"
     }
-  ],
-  "require-dev": {
-    "phpunit/phpunit": "^9.4",
-    "roave/security-advisories": "dev-latest"
-  }
+  ]
 }
