--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
   },
   "require": {
     "php": ">=7.1.0",
+    "ext-json": "*",
     "aura/router": "^3.1",
     "laminas/laminas-diactoros": "^2.4",
     "laminas/laminas-httphandlerrunner": "^1.2",
     "psr/http-message": "^1.0",
-    "ext-json": "*"
+    "psr/http-server-middleware": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.4",
