--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "aura/router": "^3.1",
     "laminas/laminas-diactoros": "^2.4",
     "laminas/laminas-httphandlerrunner": "^1.2",
+    "laminas/laminas-stratigility": "^3.3",
     "psr/http-message": "^1.0",
     "psr/http-server-middleware": "^1.0"
   },
