--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ext-PDO": "^7.1",
         "ext-json": "*",
         "aura/router": "^3.1",
+        "doctrine/migrations": "2.2.*",
         "laminas/laminas-config-aggregator": "^1.4",
         "laminas/laminas-diactoros": "^2.4",
         "laminas/laminas-httphandlerrunner": "^1.2",
